# pilot_log

./: LICENSE  Pipfile  README.md  manage.py  pyproject.toml  renovate.json  requirements.md  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: settings.py  urls.py  wsgi.py
logbook/: admin.py  apps.py  context_processors.py  models.py  test_models.py  urls.py  views.py
logbook/fixtures/: fuel_type.json  import_aerodromes.py
logbook/fixtures/data/: aerodromes.json
logbook/management/commands/: import_flightlog.py
logbook/migrations/: 0001_initial.py  0002_aircraft_icao_designator.py  0003_default_auto_field.py  0004_logentry_arrival_after_departure.py  0005_logentry_copilot_not_pilot.py  0006_alter_aircraft_registration.py  0007_logentry_cross_country.py  0008_logentry_slots.py  0009_logentry_no_pic_no_xc.py  0010_alter_certificate_options_logentry_night.py  0011_alter_aircraft_options.py  0012_aircraft_currency_required.py  0013_pilot_self.py  0014_certificate_relinquished.py  0015_certificate_validity_after_issue.py  0016_aircraft_speed_unit_aircraft_v_app_aircraft_v_bg_and_more.py  0017_certificate_supersedes.py  0018_remove_certificate_relinquished.py  0019_alter_certificate_options.py  0020_certificate_supersedes_self.py  0021_certificate_supersedes_unique.py  0022_aircraft_demonstrated_crosswind.py  0023_aircraft_v_ref.py  0024_rename_self_pilot_me.py  0025_pilot_only_one_me.py  0026_alter_aerodrome_icao_code.py  0027_aircraft_remarks.py  0028_aircraft_v_fe.py  0029_aircraft_night_vfr.py  0030_aircraft_reduced_noise.py  0031_fueltype_aircraft_fuel_types.py  0032_alter_fueltype_options_fueltype_color.py  0033_alter_aircraft_v_s.py  0034_rename_aircraft_v_s_aircraft_v_s1.py  0035_rename_aircraft_v_bg_aircraft_v_md.py  0036_alter_aircraft_v_s1.py  0037_alter_aircraft_v_s1.py
logbook/models/: aerodrome.py  aircraft.py  log_entry.py  pilot.py
logbook/statistics/: currency.py  experience.py
logbook/templates/logbook/: aircraft_list.html  astro.html  base.html  certificate_list.html  currency_status.html  dashboard.html  experience.html  experience_list.html  field_description_item.html  filter_qs.html  form.html  location_data.html  logentry_list.html  nav_item.html  ordering_marker.html  pagination.html  per_function_item.html  speed_description_item.html  speed_item.html
logbook/templatetags/: logbook_utils.py  test_logbook_utils.py
logbook/views/: aircraft.py  astro.py  certificates.py  dashboard.py  entries.py  experience.py  index.py  utils.py
pilot_log/: settings.py  urls.py  wsgi.py
static/: site.webmanifest
static/css/: datatables.min.css
static/js/: datatables.min.js
tests/: conftest.py  test_models.py  test_statistics.py  test_templatetags.py
vereinsflieger/: models.py  test_models.py  test_vereinsflieger.py  test_vereinsflieger_api.py  vereinsflieger.py  vereinsflieger_api.py  vereinsflieger_scraper.py
vereinsflieger/fixtures/: vf_12154186_dual.json  vf_12240603_solo.json  vf_12256298_pic.json
