[tool.poetry]
name = "pilot_log"
version = "0.1.0"
description = "Simple Django pilot log webapp"
authors = ["Yury V. Zaytsev <yury@shurup.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"  # @mm-version-check-ignore

django = "*"
django-countries = "*"
django-bootstrap5 = "*"
django-colorfield = "*"

python-dateutil = "*"
skyfield = "*"
timezonefinder = "*"

requests = "*"
playwright = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"

requests-mock = "*"

pytest-django = "*"
pytest-cov = "*"

ruff = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "**/tests/**",
    "*/migrations/*",
    "*/test_*.py",
    "manage.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
