[project]
name = "pilot_log"
description = "Simple Django pilot log webapp"
readme = "README.md"
authors = [
    { name = "Yury V. Zaytsev", email = "yury@shurup.com" }
]
repository = "https://github.com/zyv/pilot_log"
keywords = ["aviation", "python", "django"]
license = "MIT"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-countries",
    "django-bootstrap5",
    "django-colorfield",
    "python-dateutil",
    "skyfield",
    "timezonefinder",
    "requests",
    "playwright",
    "fontawesomefree>=6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "requests-mock",
    "pytest-django",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "**/tests/**",
    "*/migrations/*",
    "*/test_*.py",
    "manage.py"
]
